solved the issue in which hovering over the upload button after a invalid file darkens the error message and the issue in which file type error in organization picture upload overlaps with the prewiew element

--- a/static/styles/image_upload_widget.css
+++ b/static/styles/image_upload_widget.css
@@ -110,6 +110,7 @@
         margin: 5px 20px 0 0;
         vertical-align: top;
         border-radius: 4px;
+        height: 200px;
     }
 }
 
@@ -157,6 +158,7 @@
     a {
         position: relative;
         top: 10px;
+        top: 19px;
     }
 }
 
@@ -187,7 +189,7 @@
 
 .realm-icon-section {
     float: none;
-    margin-bottom: 20px;
+    margin-bottom: 45px;
     display: inline-block;
 }
 
